# mteam-mcp

./: .env.example  .gitignore  LICENSE  README.md  hermes-config.example.yaml  pyproject.toml
.github/workflows/: test.yml
src/mteam_mcp/: __init__.py  client.py  server.py
tests/: test_client.py  test_server.py
